WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284168
[iOS] Selection shows in the wrong place while scrolling if endpoints are in different subscrollable containers
https://bugs.webkit.org/show_bug.cgi?id=284168
Summary
[iOS] Selection shows in the wrong place while scrolling if endpoints are in ...
Wenson Hsieh
Reported
2024-12-06 08:41:08 PST
rdar://140934400
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-12-06 09:03:26 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37548
EWS
Comment 2
2024-12-06 16:33:47 PST
Committed
287477@main
(0fd82dd1a7ef): <
https://commits.webkit.org/287477@main
> Reviewed commits have been landed. Closing PR #37548 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug