Source/WebKit/UIProcess/ios/WKTextInteractionWrapper.h
@@ -42,7 +42,7 @@
 - (void)didEndScrollingOverflow;
 - (void)selectionChanged;
 - (void)setGestureRecognizers;
-- (void)willStartScrollingOverflow;
+- (void)willStartScrollingOverflow:(UIScrollView *)scrollView;
 - (void)selectionChangedWithGestureAt:(CGPoint)point withGesture:(WKBEGestureType)gestureType withState:(UIGestureRecognizerState)gestureState withFlags:(WKBESelectionFlags)flags;
 - (void)selectionChangedWithTouchAt:(CGPoint)point withSelectionTouch:(WKBESelectionTouchPhase)touch withFlags:(WKBESelectionFlags)flags;
 - (void)lookup:(NSString *)textWithContext withRange:(NSRange)range fromRect:(CGRect)presentationRect;
@@ -56,6 +56,11 @@
 - (void)selectAll:(id)sender;
 - (void)translate:(NSString *)text fromRect:(CGRect)presentationRect;
 - (void)prepareToMoveSelectionContainer:(UIView *)newContainer;
+
+- (void)willBeginDragLift;
+- (void)didConcludeDrop;
+
+- (void)reset;
 
 #if USE(UICONTEXTMENU)
 - (void)setExternalContextMenuInteractionDelegate:(id<UIContextMenuInteractionDelegate>)delegate;
